_build/default/lib/parser.output
   0  $accept : %entry% $end

   1  program : function_def_list EOF

   2  function_def_list :
   3                    | function_def_list function_def

   4  function_def : function_type ID LPAREN params RPAREN body

   5  function_type : VOID
   6                | INT

   7  params :
   8         | param
   9         | params COMMA param

  10  param : INT ID

  11  body : LBRACE stmt_list RBRACE

  12  stmt_list :
  13            | stmt_list stmt

  14  stmt : SEMI
  15       | expr SEMI
  16       | ID ASSIGN expr SEMI
  17       | INT ID ASSIGN expr SEMI
  18       | INT ID SEMI
  19       | RETURN expr SEMI
  20       | RETURN SEMI
  21       | LBRACE stmt_list RBRACE
  22       | IF LPAREN expr RPAREN stmt
  23       | IF LPAREN expr RPAREN stmt ELSE stmt
  24       | WHILE LPAREN expr RPAREN stmt
  25       | BREAK SEMI
  26       | CONTINUE SEMI

  27  expr : NUM
  28       | ID
  29       | LPAREN expr RPAREN
  30       | SUB expr
  31       | ADD expr
  32       | NOT expr
  33       | expr ADD expr
  34       | expr SUB expr
  35       | expr MUL expr
  36       | expr DIV expr
  37       | expr MOD expr
  38       | expr EQ expr
  39       | expr NE expr
  40       | expr LT expr
  41       | expr GT expr
  42       | expr LE expr
  43       | expr GE expr
  44       | expr AND expr
  45       | expr OR expr
  46       | ID LPAREN args RPAREN

  47  args :
  48       | expr
  49       | args COMMA expr

  50  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (50)
	function_def_list : .  (2)

	.  reduce 2

	program  goto 3
	function_def_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (50)

	.  reduce 50


state 4
	program : function_def_list . EOF  (1)
	function_def_list : function_def_list . function_def  (3)

	EOF  shift 5
	INT  shift 6
	VOID  shift 7
	.  error

	function_def  goto 8
	function_type  goto 9


state 5
	program : function_def_list EOF .  (1)

	.  reduce 1


state 6
	function_type : INT .  (6)

	.  reduce 6


state 7
	function_type : VOID .  (5)

	.  reduce 5


state 8
	function_def_list : function_def_list function_def .  (3)

	.  reduce 3


state 9
	function_def : function_type . ID LPAREN params RPAREN body  (4)

	ID  shift 10
	.  error


state 10
	function_def : function_type ID . LPAREN params RPAREN body  (4)

	LPAREN  shift 11
	.  error


state 11
	function_def : function_type ID LPAREN . params RPAREN body  (4)
	params : .  (7)

	INT  shift 12
	COMMA  reduce 7
	RPAREN  reduce 7

	params  goto 13
	param  goto 14


state 12
	param : INT . ID  (10)

	ID  shift 15
	.  error


state 13
	function_def : function_type ID LPAREN params . RPAREN body  (4)
	params : params . COMMA param  (9)

	COMMA  shift 16
	RPAREN  shift 17
	.  error


state 14
	params : param .  (8)

	.  reduce 8


state 15
	param : INT ID .  (10)

	.  reduce 10


state 16
	params : params COMMA . param  (9)

	INT  shift 12
	.  error

	param  goto 18


state 17
	function_def : function_type ID LPAREN params RPAREN . body  (4)

	LBRACE  shift 19
	.  error

	body  goto 20


state 18
	params : params COMMA param .  (9)

	.  reduce 9


state 19
	body : LBRACE . stmt_list RBRACE  (11)
	stmt_list : .  (12)

	.  reduce 12

	stmt_list  goto 21


state 20
	function_def : function_type ID LPAREN params RPAREN body .  (4)

	.  reduce 4


state 21
	body : LBRACE stmt_list . RBRACE  (11)
	stmt_list : stmt_list . stmt  (13)

	INT  shift 22
	IF  shift 23
	WHILE  shift 24
	BREAK  shift 25
	CONTINUE  shift 26
	RETURN  shift 27
	ID  shift 28
	NUM  shift 29
	SEMI  shift 30
	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 33
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	stmt  goto 37
	expr  goto 38


state 22
	stmt : INT . ID ASSIGN expr SEMI  (17)
	stmt : INT . ID SEMI  (18)

	ID  shift 39
	.  error


state 23
	stmt : IF . LPAREN expr RPAREN stmt  (22)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (23)

	LPAREN  shift 40
	.  error


state 24
	stmt : WHILE . LPAREN expr RPAREN stmt  (24)

	LPAREN  shift 41
	.  error


state 25
	stmt : BREAK . SEMI  (25)

	SEMI  shift 42
	.  error


state 26
	stmt : CONTINUE . SEMI  (26)

	SEMI  shift 43
	.  error


state 27
	stmt : RETURN . expr SEMI  (19)
	stmt : RETURN . SEMI  (20)

	ID  shift 44
	NUM  shift 29
	SEMI  shift 45
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 46


state 28
	stmt : ID . ASSIGN expr SEMI  (16)
	expr : ID .  (28)
	expr : ID . LPAREN args RPAREN  (46)

	ASSIGN  shift 47
	LPAREN  shift 48
	SEMI  reduce 28
	ADD  reduce 28
	SUB  reduce 28
	MUL  reduce 28
	DIV  reduce 28
	MOD  reduce 28
	AND  reduce 28
	OR  reduce 28
	LT  reduce 28
	GT  reduce 28
	LE  reduce 28
	GE  reduce 28
	EQ  reduce 28
	NE  reduce 28


state 29
	expr : NUM .  (27)

	.  reduce 27


state 30
	stmt : SEMI .  (14)

	.  reduce 14


state 31
	expr : LPAREN . expr RPAREN  (29)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 49


state 32
	stmt : LBRACE . stmt_list RBRACE  (21)
	stmt_list : .  (12)

	.  reduce 12

	stmt_list  goto 50


state 33
	body : LBRACE stmt_list RBRACE .  (11)

	.  reduce 11


state 34
	expr : ADD . expr  (31)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 51


state 35
	expr : SUB . expr  (30)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 52


state 36
	expr : NOT . expr  (32)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 53


state 37
	stmt_list : stmt_list stmt .  (13)

	.  reduce 13


state 38
	stmt : expr . SEMI  (15)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	SEMI  shift 54
	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	AND  shift 60
	OR  shift 61
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	.  error


state 39
	stmt : INT ID . ASSIGN expr SEMI  (17)
	stmt : INT ID . SEMI  (18)

	ASSIGN  shift 68
	SEMI  shift 69
	.  error


state 40
	stmt : IF LPAREN . expr RPAREN stmt  (22)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (23)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 70


state 41
	stmt : WHILE LPAREN . expr RPAREN stmt  (24)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 71


state 42
	stmt : BREAK SEMI .  (25)

	.  reduce 25


state 43
	stmt : CONTINUE SEMI .  (26)

	.  reduce 26


state 44
	expr : ID .  (28)
	expr : ID . LPAREN args RPAREN  (46)

	LPAREN  shift 48
	SEMI  reduce 28
	COMMA  reduce 28
	RPAREN  reduce 28
	ADD  reduce 28
	SUB  reduce 28
	MUL  reduce 28
	DIV  reduce 28
	MOD  reduce 28
	AND  reduce 28
	OR  reduce 28
	LT  reduce 28
	GT  reduce 28
	LE  reduce 28
	GE  reduce 28
	EQ  reduce 28
	NE  reduce 28


state 45
	stmt : RETURN SEMI .  (20)

	.  reduce 20


state 46
	stmt : RETURN expr . SEMI  (19)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	SEMI  shift 72
	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	AND  shift 60
	OR  shift 61
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	.  error


state 47
	stmt : ID ASSIGN . expr SEMI  (16)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 73


state 48
	expr : ID LPAREN . args RPAREN  (46)
	args : .  (47)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	COMMA  reduce 47
	RPAREN  reduce 47

	expr  goto 74
	args  goto 75


state 49
	expr : LPAREN expr . RPAREN  (29)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	RPAREN  shift 76
	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	AND  shift 60
	OR  shift 61
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	.  error


state 50
	stmt_list : stmt_list . stmt  (13)
	stmt : LBRACE stmt_list . RBRACE  (21)

	INT  shift 22
	IF  shift 23
	WHILE  shift 24
	BREAK  shift 25
	CONTINUE  shift 26
	RETURN  shift 27
	ID  shift 28
	NUM  shift 29
	SEMI  shift 30
	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 77
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	stmt  goto 37
	expr  goto 38


state 51
	expr : ADD expr .  (31)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 31


state 52
	expr : SUB expr .  (30)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 30


state 53
	expr : NOT expr .  (32)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 32


state 54
	stmt : expr SEMI .  (15)

	.  reduce 15


state 55
	expr : expr ADD . expr  (33)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 78


state 56
	expr : expr SUB . expr  (34)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 79


state 57
	expr : expr MUL . expr  (35)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 80


state 58
	expr : expr DIV . expr  (36)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 81


state 59
	expr : expr MOD . expr  (37)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 82


state 60
	expr : expr AND . expr  (44)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 83


state 61
	expr : expr OR . expr  (45)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 84


state 62
	expr : expr LT . expr  (40)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 85


state 63
	expr : expr GT . expr  (41)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 86


state 64
	expr : expr LE . expr  (42)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 87


state 65
	expr : expr GE . expr  (43)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 88


state 66
	expr : expr EQ . expr  (38)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 89


state 67
	expr : expr NE . expr  (39)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 90


state 68
	stmt : INT ID ASSIGN . expr SEMI  (17)

	ID  shift 44
	NUM  shift 29
	LPAREN  shift 31
	ADD  shift 34
	SUB  shift 35
	NOT  shift 36
	.  error

	expr  goto 91


state 69
	stmt : INT ID SEMI .  (18)

	.  reduce 18


state 70
	stmt : IF LPAREN expr . RPAREN stmt  (22)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (23)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	RPAREN  shift 92
	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	AND  shift 60
	OR  shift 61
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	.  error


state 71
	stmt : WHILE LPAREN expr . RPAREN stmt  (24)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	RPAREN  shift 93
	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	AND  shift 60
	OR  shift 61
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	.  error


state 72
	stmt : RETURN expr SEMI .  (19)

	.  reduce 19


state 73
	stmt : ID ASSIGN expr . SEMI  (16)
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	SEMI  shift 94
	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	AND  shift 60
	OR  shift 61
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	.  error


state 74
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	args : expr .  (48)

	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	AND  shift 60
	OR  shift 61
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	COMMA  reduce 48
	RPAREN  reduce 48


state 75
	expr : ID LPAREN args . RPAREN  (46)
	args : args . COMMA expr  (49)

	COMMA  shift 95
	RPAREN  shift 96
	.  error


state 76
	expr : LPAREN expr RPAREN .  (29)

	.  reduce 29


state 77
	stmt : LBRACE stmt_list RBRACE .  (21)

	.  reduce 21


state 78
	expr : expr . ADD expr  (33)
	expr : expr ADD expr .  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	SEMI  reduce 33
	COMMA  reduce 33
	RPAREN  reduce 33
	ADD  reduce 33
	SUB  reduce 33
	AND  reduce 33
	OR  reduce 33
	LT  reduce 33
	GT  reduce 33
	LE  reduce 33
	GE  reduce 33
	EQ  reduce 33
	NE  reduce 33


state 79
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr SUB expr .  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	SEMI  reduce 34
	COMMA  reduce 34
	RPAREN  reduce 34
	ADD  reduce 34
	SUB  reduce 34
	AND  reduce 34
	OR  reduce 34
	LT  reduce 34
	GT  reduce 34
	LE  reduce 34
	GE  reduce 34
	EQ  reduce 34
	NE  reduce 34


state 80
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr MUL expr .  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 35


state 81
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr DIV expr .  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 36


state 82
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr MOD expr .  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 37


state 83
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr AND expr .  (44)
	expr : expr . OR expr  (45)

	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	SEMI  reduce 44
	COMMA  reduce 44
	RPAREN  reduce 44
	AND  reduce 44
	OR  reduce 44


state 84
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : expr OR expr .  (45)

	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	AND  shift 60
	LT  shift 62
	GT  shift 63
	LE  shift 64
	GE  shift 65
	EQ  shift 66
	NE  shift 67
	SEMI  reduce 45
	COMMA  reduce 45
	RPAREN  reduce 45
	OR  reduce 45


state 85
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr LT expr .  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	SEMI  reduce 40
	COMMA  reduce 40
	RPAREN  reduce 40
	AND  reduce 40
	OR  reduce 40
	LT  reduce 40
	GT  reduce 40
	LE  reduce 40
	GE  reduce 40
	EQ  reduce 40
	NE  reduce 40


state 86
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr GT expr .  (41)
	expr : expr . LE expr  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	SEMI  reduce 41
	COMMA  reduce 41
	RPAREN  reduce 41
	AND  reduce 41
	OR  reduce 41
	LT  reduce 41
	GT  reduce 41
	LE  reduce 41
	GE  reduce 41
	EQ  reduce 41
	NE  reduce 41


state 87
	expr : expr . ADD expr  (33)
	expr : expr . SUB expr  (34)
	expr : expr . MUL expr  (35)
	expr : expr . DIV expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NE expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . LE expr  (42)
	expr : expr LE expr .  (42)
	expr : expr . GE expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	ADD  shift 55
	SUB  shift 56
	MUL  shift 57
	DIV  shift 58
	MOD  shift 59
	SEMI  reduce 42
	COMMA  reduce 42
	RPAREN  reduce 42
	AND  reduce 42
	OR  reduce 42
	LT  reduce 42
	GT  reduce 42
	LE  reduce 42
	GE  reduce 42
	EQ  reduce 42
	NE  reduce 42

